--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,15 @@
-body {
-  background: url(./images/fondo.jpg) 0 50% fixed;
-  background-size: 100%;
+.main-container{
+    width: 75%;
+    margin-left: 25%;
+}
+
+.somdra{
+    -webkit-box-shadow: 0 4px 8px 0 #777, 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 4px 8px 0 #777, 0 10px 6px -6px #777;
+    box-shadow: 0 4px 8px 0 #777, 0 10px 6px -6px #777;
+}
+
+body{
+    background: url("./images/fondo.jpg") 0 50%;
+	background-size: 100%;
 }
