--- a/frontend/src/componetes/QuienesSomos.css
+++ b/frontend/src/componetes/QuienesSomos.css
@@ -1,8 +1,3 @@
-.descripcion {
-    width: 70%;
-    height: 750px;
-    margin-left: 25%;
-    text-align: center;
-    background: url('../images/dream.png') no-repeat;
-    background-size: 100%;
+.fondo-quienes-somos {
+    background-color: #a7d8a0 !important;
 }
