--- a/frontend/src/componetes/Pasos.css
+++ b/frontend/src/componetes/Pasos.css
@@ -1,15 +1,3 @@
-.listadepasos {
-}
-.pasos {
-    width: 70%;
-    margin-left: 25%;
-}
-.effect1{
-    -webkit-box-shadow: 0 10px 6px -6px #777;
-    -moz-box-shadow: 0 10px 6px -6px #777;
-    box-shadow: 0 10px 6px -6px #777;
-}
-
-.texto{
-    text-align: center;
+.fondo-pasos{
+    background-color: #598880;
 }
