--- a/frontend/src/layoutit/Chat.css
+++ b/frontend/src/layoutit/Chat.css
@@ -1,8 +1,7 @@
-
 .chat {
     position: fixed;
     bottom: 0;
-    right: 0;
+    left: 0;
     padding: 0;
     line-height: 60px;
     color: white;
